--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "motion": "^12.29.2",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
